--- a/.github/workflows/sync-slide.yml
+++ b/.github/workflows/sync-slide.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Download slides as images
         env:
           SERVICE_ACCOUNT_JSON_PATH: "./service-account.json"
-          SLIDE_CONFIG: ${{ inputs.slides }}
+          SLIDES_CONFIG: ${{ inputs.slides }}
           TEMP_DIR: "./temp-images"
         run: |
           mkdir -p $TEMP_DIR
