--- a/.github/workflows/sync-slide.yml
+++ b/.github/workflows/sync-slide.yml
@@ -82,7 +82,7 @@ jobs:
           git add --all
 
           if ! git diff-index --quiet HEAD --; then
-            git commit -m "Update images from Google Drive"
+            git commit -m "Update slides"
             git push
           else
             echo "No changes to commit."
