一時ファイルを削除、gitignore更新

--- a/.github/workflows/sync-slide.yml
+++ b/.github/workflows/sync-slide.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install packages
         run: |
-          npm install google-auth-library googleapis
+          npm install
         shell: bash
 
       - name: Download slides as images
