--- a/.github/workflows/sync-slide.yml
+++ b/.github/workflows/sync-slide.yml
@@ -7,8 +7,10 @@ on:
         description: 'Slides config in JSON format. Example: [{"type":"sample","url":"https://docs.google.com/presentation/d/xxx"}, ...]'
         required: true
         type: string
-#  repository_dispatch:
-#    types: [on-demand-sync-drive-files]
+
+  repository_dispatch:
+    types:
+      - sync-slides-manual
 
 env:
   TEMP_IMAGES: temp-images
