デバッグログの追加

--- a/.github/workflows/sync-slide.yml
+++ b/.github/workflows/sync-slide.yml
@@ -36,8 +36,9 @@ jobs:
       - name: Install packages
         run: |
           npm install
-          echo ${{ github.event }}
-          echo ${{ github.event.client_payload }}
+          echo "${{ github.event }}"
+          echo "${{ github.event.client_payload }}"
+          echo "${{ github.event.client_payload.slides }}"
         shell: bash
 
       - name: Download slides as images
