--- a/.github/workflows/sync-slide.yml
+++ b/.github/workflows/sync-slide.yml
@@ -39,12 +39,13 @@ jobs:
           echo "${{ github.event }}"
           echo "${{ github.event.client_payload }}"
           echo "${{ github.event.client_payload.slides }}"
+          echo ${{ toJSON(github.event.client_payload.slides) }}
         shell: bash
 
       - name: Download slides as images
         env:
           SERVICE_ACCOUNT_JSON_PATH: "./service-account.json"
-          SLIDES_CONFIG: ${{ github.event.client_payload.slides }}
+          SLIDES_CONFIG: ${{ toJSON(github.event.client_payload.slides) }}
           TEMP_DIR: ${{ env.TEMP_IMAGES }}
           TEMP_IMAGES_CRUNCHED: ${{ env.TEMP_IMAGES_CRUNCHED }}
         run: |
