UECA(unity-export-crunched-aciton)のバージョン指定をv1に変更

--- a/.github/workflows/sync-slide.yml
+++ b/.github/workflows/sync-slide.yml
@@ -41,7 +41,7 @@ jobs:
           node ./scripts/download-slides.js
 
       - name: Crunch images
-        uses: tp-jp/unity-export-crunched-action@main
+        uses: tp-jp/unity-export-crunched-action@v1
         with:
           input-path: ${{ env.TEMP_IMAGES }}
           output-path: ${{ env.TEMP_IMAGES_CRUNCHED }}
