--- a/.github/workflows/sync-slide.yml
+++ b/.github/workflows/sync-slide.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y poppler-utils
+
       - name: Install packages
         run: |
           npm install
