--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "google-auth-library": "^9.15.1",
-    "googleapis": "^148.0.0",
-    "pdf-poppler": "^0.2.1"
+    "googleapis": "^148.0.0"
   }
 }
